# Lab_lecture-testing-task

.github/workflows/: ci.yml
05_hw/: CMakeLists.txt  README.md  benchmark.c  stack.c  stack_tests.c
